# AI-Jarvis

./: .gitignore  AI Jarvis.pdma  README.md
NoteGather/deploy/: docker-compose.yml
NoteGather/deploy/sql/: init.sql
NoteGather/docs/: phase1_database.sql  第一阶段技术架构设计方案.md
NoteGather/note-gather-ai/: .env.example  .gitignore  pyproject.toml
NoteGather/note-gather-ai/parse_service/: __init__.py  consumer.py  grpc_server.py  main.py  pipeline.py
NoteGather/note-gather-ai/scripts/: gen_proto.ps1  gen_proto.sh
NoteGather/note-gather-ai/search_service/: __init__.py  chat.py  grpc_server.py  main.py  retriever.py
NoteGather/note-gather-ai/shared/: config.py  embedder.py  es_client.py  llm_client.py  logger.py  minio_client.py  qdrant_store.py
NoteGather/note-gather-ai/shared/pb/: __init__.py
NoteGather/note-gather-server/: .gitignore  pom.xml
NoteGather/note-gather-server/docs/: M1用户与鉴权设计方案.md  M2知识库和笔记设计方案.md  三服务DDD重构方案.md
NoteGather/note-gather-server/docs/database/: M3解析任务唯一约束迁移.sql
NoteGather/note-gather-server/docs/nacos/: README.md  common.yaml  ng-admin.yaml  ng-biz.yaml  ng-gateway.yaml  publish.ps1
NoteGather/note-gather-server/ng-admin/: pom.xml
NoteGather/note-gather-server/ng-admin/src/main/java/com/notegather/admin/: NgAdminApplication.java
NoteGather/note-gather-server/ng-admin/src/main/resources/: application.yml  bootstrap.yml
NoteGather/note-gather-server/ng-biz/: pom.xml
NoteGather/note-gather-server/ng-biz/module-ai/: pom.xml
NoteGather/note-gather-server/ng-biz/module-file/: pom.xml
NoteGather/note-gather-server/ng-biz/module-knowledge/: pom.xml
NoteGather/note-gather-server/ng-biz/module-user/: pom.xml
NoteGather/note-gather-server/ng-biz/ng-biz-app/: pom.xml
NoteGather/note-gather-server/ng-biz/ng-biz-app/src/main/java/com/notegather/biz/: NgBizApplication.java
NoteGather/note-gather-server/ng-biz/ng-biz-app/src/main/resources/: application.yml  bootstrap-dev.yml  bootstrap.yml
NoteGather/note-gather-server/ng-common/: pom.xml
NoteGather/note-gather-server/ng-common/common-api/: pom.xml
NoteGather/note-gather-server/ng-common/common-core/: pom.xml
NoteGather/note-gather-server/ng-common/common-grpc/: pom.xml
NoteGather/note-gather-server/ng-common/common-mq/: pom.xml
NoteGather/note-gather-server/ng-common/common-mybatis/: pom.xml
NoteGather/note-gather-server/ng-common/common-redis/: pom.xml
NoteGather/note-gather-server/ng-common/common-security/: pom.xml
NoteGather/note-gather-server/ng-gateway/: pom.xml
NoteGather/note-gather-server/ng-gateway/src/main/java/com/notegather/gateway/: NgGatewayApplication.java
NoteGather/note-gather-server/ng-gateway/src/main/java/com/notegather/gateway/config/: SecurityWhiteListProperties.java
NoteGather/note-gather-server/ng-gateway/src/main/java/com/notegather/gateway/filter/: JwtAuthFilter.java
NoteGather/note-gather-server/ng-gateway/src/main/resources/: application.yml  bootstrap-dev.yml  bootstrap.yml
NoteGather/notegather-ai/: pyproject.toml
NoteGather/notegather-ai/app/: main.py
NoteGather/notegather-ai/app/api/: health.py
NoteGather/notegather-ai/shared/: config.py  observability.py
NoteGather/notegather-server/: pom.xml
NoteGather/notegather-server/notegather-admin/: pom.xml
NoteGather/notegather-server/notegather-admin/src/main/java/com/notegather/admin/: AdminApplication.java
NoteGather/notegather-server/notegather-admin/src/main/resources/: application.yaml  logback-spring.xml
NoteGather/notegather-server/notegather-biz/: pom.xml
NoteGather/notegather-server/notegather-biz/src/main/java/com/notegather/biz/: BizApplication.java
NoteGather/notegather-server/notegather-biz/src/main/resources/: application.yaml  logback-spring.xml
NoteGather/notegather-server/notegather-biz/src/main/resources/mapper/: ResourceGrantMapper.xml
NoteGather/notegather-server/notegather-common/: pom.xml
NoteGather/notegather-server/notegather-common/common-core/: pom.xml
NoteGather/notegather-server/notegather-gateway/: pom.xml
NoteGather/notegather-server/notegather-gateway/src/main/java/com/notegather/gateway/: GatewayApplication.java
NoteGather/notegather-server/notegather-gateway/src/main/resources/: application.yaml  logback-spring.xml
NoteGather/protos/: ng_ai.proto
docs/: Agent 工作流概要说明书.md
docs/draft/: 个人知识库平台产品设计文档.md  个人知识库项目启动.md
(+256 files in other folders)
