[tool.poetry]
name = "note-gather-ai"
version = "1.0.0"
description = "NoteGather unified FastAPI AI service"
authors = ["NoteGather"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = "^2.8.2"
PyYAML = "^6.0.1"
loguru = "^0.7.2"
qdrant-client = "^1.10.1"
FlagEmbedding = "^1.2.10"
langchain-text-splitters = "^0.2.2"
litellm = "1.74.9"
langgraph = "^0.2.0"
pdfminer-six = ">=20240706,<20270000"
python-multipart = "^0.0.9"
minio = "^7.2.7"
rocketmq-client-python = "^2.0.0"
neo4j = "^5.22.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["app/infrastructure/shared/pb"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
